# assetbundle

./: README.md  databricks.yml  demo.ipynb  pyproject.toml
.github/workflows/: CD-Workflow.yml  cd workflow release.yml  cd-folder-selective-deploy.yml  cd-selective-deploy.yml  cd-workflow-param.yml  cd_workdlow_param2test.yml  ci-workflow.yml  main.yml
citibike_etl/notebooks/01_bronze/: 01_bronze_citibike.ipynb
citibike_etl/notebooks/02_silver/: 02_silver_citibike.ipynb
citibike_etl/notebooks/03_gold/: 03_gold_citibike_daily_ride_summary.ipynb  03_gold_citibike_daily_station_performance.ipynb
dabproject/.github/workflows/: CD-Workflow.yml  ci-workflow.yml
dabproject/resources/variable/: variable.yml
dabproject/src/notebook/: DemoBoeing.ipynb  ingest.ipynb  test0903.ipynb  test310.ipynb  testing310.ipynb
doc/: cd-workflow-evolution.md  ivestigation-doc.md  selective-deploy-workflows.md  terraform-approach-comparison.txt  terraform-approaches-guide.md  terraform-architecture-combined.txt  terraform-architecture-separate-folder.txt  terraform-architecture.txt  terraform-cicd-architecture.drawio  terraform-metadata-codegen-approach.txt
resources/: citibike_etl_pipeline_nb.job.yml
resources/jobs/: job.yml
resources/pipeline/: demopipeline.yml
resources/pipelines/: demopipeline.yml
src/: databricks.yml  service.py  utils.py
src/citibike/: citibike_utils.py
src/dabproject/notebook/: mm_new_11.ipynb  test0903.ipynb  test_mm.ipynb
src/notebook/: DemoBoeing.ipynb  test310.ipynb
src/utils/: datetime_utils.py
terraform/envs/dev copy/: outputs.tf  variables.tf
tests/: databricks.yml  test_service.py  test_something.py  test_utils.py
(+26 files in other folders)
